<resources>
    <string name="app_name">Greet X</string>
    <string name="text">Express your feelings...</string>
    <string name="text1">Title 1</string>
    <string name="text2">See All</string>
    <string name="text3">Title 2</string>
    <string name="text4">Title 3</string>
    <string name="btn">Back</string>
    <string name="button">See All</string>
    <string name="layout">next</string>
    <string name="img">next</string>
    <string name="btn1">English</string>
    <string name="btn2">Hindi</string>
    <string name="btn3">Marathi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt">By signing you agree to our Terms of Use and Privacy policy</string>
</resources>