<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Dashboard">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="168dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@id/imageView2"
            app:srcCompat="@drawable/baseline_bookmark_24" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="219dp"
            android:layout_toRightOf="@id/imageView2"
            app:srcCompat="@drawable/baseline_settings_24" />
    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text1"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:onClick="@string/button"
                    android:id="@+id/btn"
                    android:text="@string/text2"
                    android:textColor="#2C5BE6"
                    android:background="@color/black"
                    android:textSize="16sp" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <ImageView
                            android:id="@+id/imageView10"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="50dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/image" />

                        <ImageView
                            android:id="@+id/imageView11"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_marginTop="50dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/image2" />


                        <ImageView
                            android:id="@+id/imageView12"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_marginTop="50dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/image3" />


                    </LinearLayout>

                </HorizontalScrollView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/text3"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/text2"
                    android:textColor="#2C5BE6"
                    android:textSize="16sp" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <ImageView
                            android:id="@+id/imageView13"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="50dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/image" />

                        <ImageView
                            android:id="@+id/imageView14"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_marginTop="50dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/image2" />

                        <ImageView
                            android:id="@+id/imageView15"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_marginTop="50dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/image3" />


                    </LinearLayout>

                </HorizontalScrollView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/text4"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/text2"
                    android:textColor="#2C5BE6"
                    android:textSize="16sp" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="50dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/image" />

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_marginTop="50dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/image2" />

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_marginTop="50dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/image3" />


                    </LinearLayout>

                </HorizontalScrollView>

            </RelativeLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>